    (Anatol)

- DOM:
  . Fixed bug #67474 (getElementsByTagNameNS filter on default ns). (aboks)
  . Fixed bug #54382 (getAttributeNodeNS doesn't get xmlns* attributes).
    (aboks)
  . Fixed bug #74004 (LIBXML_NOWARNING (etc) ignored by DOMDocument::loadHTML).
    (somedaysummer)

- EXIF:
  . Added support for vendor specific tags for the following formats:
    Samsung, DJI, Panasonic, Sony, Pentax, Minolta & Sigma/Foveon. (Kalle)
  . Fixed bug #72682 (exif_read_data() fails to read all data for some
    images). (Kalle)
  . Fixed bug #71534 (Type confusion in exif_read_data() leading to heap
    overflow in debug mode). (hlt99 at blinkenshell dot org, Kalle)
  . Fixed bug #68547 (Exif Header component value check error).
    (sjh21a at gmail dot com, Kalle)
  . Fixed bug #66443 (Corrupt EXIF header: maximum directory nesting level
    reached for some cameras). (Kalle)
  . Fixed Redhat bug #1362571 (PHP not returning full results for
    exif_read_data function). (Kalle)

- FPM:
  . Configuration to limit fpm slow log trace callers. (Sannis)
  . Fixed bug #69865 (php-fpm does not close stderr when using syslog). 
    (Mike)

- FTP:
  . Fixed bug #74598 (ftp:// wrapper ignores context arg). (Sara)
  . Implement MLSD for structured listing of directories. (blar)

- GD:
  . Implemented imageresolution as getter and setter (Christoph)
  . Fixed bug #74343 (compile fails on solaris 11 with system gd2 library).
    (krakjoe)

- GMP:
  . Fixed bug #70896 (gmp_fact() silently ignores non-integer input). (Sara)

- hash:
  . Fixed bug #73961 (environmental build dependency in hash sha3 source).
    (krakjoe)
  . Changed HashContext from resource to object. (Rouven Weßling, Sara)

- intl:
  . Fixed bug #74433 (wrong reflection for Normalizer methods). (villfa)
  . Fixed bug #74439 (wrong reflection for Locale methods). (villfa)
  . Fixed bug #74468 (wrong reflection on Collator::sortWithSortKeys). (villfa)